--- a/content/publication/verification-of-safety-critical-control-policies-using-kernel-methods/cite.bib
+++ b/content/publication/verification-of-safety-critical-control-policies-using-kernel-methods/cite.bib
@@ -1,1 +1,1 @@
-@INPROCEEDINGS{Vertovec2022,  author={Vertovec, Nikolaus and Ober-Blöbaum, Sina and Margellos, Kostas},  booktitle={2022 European Control Conference (ECC)},   title={Verification of safety critical control policies using kernel methods},   year={2022},  volume={},  number={},  pages={}}
+@INPROCEEDINGS{Vertovec2022,  author={Vertovec, Nikolaus and Ober-Blöbaum, Sina and Margellos, Kostas},  booktitle={2022 European Control Conference (ECC)},   title={Verification of safety critical control policies using kernel methods},   year={2022},  volume={},  number={},  pages={1870-1875},  doi={10.23919/ECC55457.2022.9838224}}
