--- a/content/publication/state-aggregation-for-distributed-value-iteration-in-dynamic-programming/cite.bib
+++ b/content/publication/state-aggregation-for-distributed-value-iteration-in-dynamic-programming/cite.bib
@@ -3,8 +3,8 @@
   journal={IEEE Control Systems Letters}, 
   title={State Aggregation for Distributed Value Iteration in Dynamic Programming}, 
   year={2023},
-  volume={},
+  volume={7},
   number={},
-  pages={1-1},
+  pages={2269-2274},
   doi={10.1109/LCSYS.2023.3285655}
 }
